src/objects/SCRB_SalesOrderLineItem__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - The SalesOrderLineItem object can contains the product line items for a sales order.</description>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>R00N300000011qz5EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityCanceled__c</fullName>
        <label>Quantity Canceled</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityShipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestedShipmentOn__c</fullName>
        <label>Requested Shipment On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesOrderId__c</fullName>
        <label>Sales Order ID</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Airborne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order Item</label>
    <nameField>
        <label>Item Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>